--- a/tc.ipynb
+++ b/tc.ipynb
@@ -6,12 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylab import *\n",
-    "import matplotlib\n",
-    "%matplotlib inline\n",
+    "from __future__ import division\n",
+    "from IPython.display import display\n",
     "\n",
-    "x = linspace(0, 5, 10)\n",
-    "y = x ** 2"
+    "from sympy.interactive import printing\n",
+    "printing.init_printing(use_latex='mathjax')\n",
+    "\n",
+    "import sympy as sym\n",
+    "from sympy import *\n",
+    "x, y, z = symbols(\"x y z\")\n",
+    "k, m, n = symbols(\"k m n\", integer=True)\n",
+    "f, g, h = map(Function, 'fgh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rational(3,2)*pi + exp(I*x) / (x**2 + y)"
    ]
   },
   {
@@ -21,20 +35,6 @@
    "outputs": [],
    "source": [
     ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figure()\n",
-    "plot(x, y, 'r')\n",
-    "xlabel('x')\n",
-    "ylabel('y')\n",
-    "title('title')\n",
-    "show()"
    ]
   },
   {
